cmake_minimum_required(VERSION 3.28)
project(demo_cpp_basic)

set(CMAKE_CXX_STANDARD 11)

#add_executable(demo_cpp_basic ./cpp-syntax/main-array.cpp)
#add_executable(demo_cpp_basic LeetCode-Hot-100/dp/minPathSum.cpp)

#add_executable(demo_cpp_basic LeetCode-Hot-100/divide-and-conquer/merge-sort.cpp)
#add_executable(demo_cpp_basic cpp-syntax/unordered-map.cpp)
#add_executable(demo_cpp_basic LeetCode-Hot-100/sort/quicksort.cpp)


#add_executable(demo_cpp_basic multi-thread/print-2-gpt.c)
#target_link_libraries(demo_cpp_basic pthread)

add_executable(demo_cpp_basic top/backtrack/combine.cpp)